--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="list_item_text_color">#dddddd</color>
     <color name="winner_text_color">#00ff00</color>
     <color name="loser_text_color">#ff0000</color>
+    <color name="alert_dialog_backgound_color">#dddddd</color>
 </resources>
